k8s/apps/alertservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertservice
  template:
    metadata:
      labels:
        app: alertservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: alertservice
        image: ghcr.io/bsametarman/ratewatch-alertservice:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
