k8s/apps/analyticsservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyticsservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyticsservice
  template:
    metadata:
      labels:
        app: analyticsservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: analyticsservice
        image: ghcr.io/bsametarman/ratewatch-analyticsservice:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
