k8s/apps/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: apigateway
        image: ghcr.io/bsametarman/ratewatch-apigateway:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
