k8s/apps/authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: authservice
        image: ghcr.io/bsametarman/ratewatch-authservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
