k8s/apps/dashboardservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboardservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboardservice
  template:
    metadata:
      labels:
        app: dashboardservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: dashboardservice
        image: ghcr.io/bsametarman/ratewatch-dashboardservice:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
