k8s/apps/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:9.1.5
        ports:
        - containerPort: 9200
        resources:
          requests:
            cpu: "250m"
            memory: "750Mi"
          limits:
            cpu: "1"
            memory: "1.5Gi"
