k8s/apps/notificationservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: notificationservice
        image: ghcr.io/bsametarman/ratewatch-notificationservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
