k8s/apps/ratefetcherservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratefetcherservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratefetcherservice
  template:
    metadata:
      labels:
        app: ratefetcherservice
    spec:
      strategy:
        type: Recreate
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: ratefetcherservice
        image: ghcr.io/bsametarman/ratewatch-ratefetcherservice:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
