k8s/apps/thresholdruleservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thresholdruleservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thresholdruleservice
  template:
    metadata:
      labels:
        app: thresholdruleservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: thresholdruleservice
        image: ghcr.io/bsametarman/ratewatch-thresholdruleservice:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
