k8s/apps/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: userservice
        image: ghcr.io/bsametarman/ratewatch-userservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
