k8s/apps/alertservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertservice-service
spec:
  selector:
    app: alertservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
