k8s/apps/analyticsservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyticsservice-service
spec:
  selector:
    app: analyticsservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
