k8s/apps/apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
spec:
  type: ClusterIP
  selector:
    app: apigateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
