k8s/apps/authservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice-service
spec:
  selector:
    app: authservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
