k8s/apps/dashboardservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboardservice-service
spec:
  selector:
    app: dashboardservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
