k8s/apps/notificationservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificationservice-service
spec:
  type: ClusterIP
  selector:
    app: notificationservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
