k8s/apps/thresholdruleservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thresholdruleservice-service
spec:
  selector:
    app: thresholdruleservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
